--- a/MemoryEye/MemoryEye/MemoryList.storyboard
+++ b/MemoryEye/MemoryEye/MemoryList.storyboard
@@ -22,15 +22,15 @@
                                 <rect key="frame" x="0.0" y="64" width="414" height="798"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="131" id="fNY-Wf-VzR">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="131"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="145" id="fNY-Wf-VzR">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="145"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fNY-Wf-VzR" id="9h1-rc-pdV">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="130.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="144.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xJ1-ld-T9v">
-                                                    <rect key="frame" x="0.0" y="0.0" width="136" height="130.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="136" height="124.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="136" id="9dv-0Y-hSw"/>
                                                     </constraints>
@@ -56,7 +56,6 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="xJ1-ld-T9v" firstAttribute="top" secondItem="9h1-rc-pdV" secondAttribute="top" id="0f5-VL-iSe"/>
-                                                <constraint firstItem="Erg-NZ-b2C" firstAttribute="centerY" secondItem="9h1-rc-pdV" secondAttribute="centerY" id="5Nn-e4-aAo"/>
                                                 <constraint firstAttribute="trailing" secondItem="ViQ-g5-prW" secondAttribute="trailing" constant="16" id="6tk-IQ-OZ1"/>
                                                 <constraint firstItem="ViQ-g5-prW" firstAttribute="leading" secondItem="xJ1-ld-T9v" secondAttribute="trailing" constant="16" id="7vS-SL-HAP"/>
                                                 <constraint firstItem="xJ1-ld-T9v" firstAttribute="leading" secondItem="9h1-rc-pdV" secondAttribute="leading" id="FL9-QR-0QQ"/>
@@ -64,8 +63,9 @@
                                                 <constraint firstItem="qIC-8e-d2n" firstAttribute="top" secondItem="Erg-NZ-b2C" secondAttribute="bottom" constant="24" id="VUl-Ef-mI8"/>
                                                 <constraint firstItem="qIC-8e-d2n" firstAttribute="leading" secondItem="xJ1-ld-T9v" secondAttribute="trailing" constant="16" id="n8z-fw-x3l"/>
                                                 <constraint firstAttribute="trailing" secondItem="Erg-NZ-b2C" secondAttribute="trailing" constant="16" id="odb-6r-Nvi"/>
+                                                <constraint firstItem="ViQ-g5-prW" firstAttribute="top" secondItem="9h1-rc-pdV" secondAttribute="top" constant="10" id="rhz-uh-dnX"/>
                                                 <constraint firstItem="Erg-NZ-b2C" firstAttribute="top" secondItem="ViQ-g5-prW" secondAttribute="bottom" constant="24" id="tRO-0N-xQe"/>
-                                                <constraint firstAttribute="bottom" secondItem="xJ1-ld-T9v" secondAttribute="bottom" id="w1K-aV-yd0"/>
+                                                <constraint firstAttribute="bottom" secondItem="xJ1-ld-T9v" secondAttribute="bottom" constant="20" id="w1K-aV-yd0"/>
                                                 <constraint firstItem="Erg-NZ-b2C" firstAttribute="leading" secondItem="xJ1-ld-T9v" secondAttribute="trailing" constant="16" id="wz2-HW-7Q3"/>
                                             </constraints>
                                         </tableViewCellContentView>
