--- a/MemoryEye/MemoryEye/HomePage.storyboard
+++ b/MemoryEye/MemoryEye/HomePage.storyboard
@@ -18,31 +18,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome Hacker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qS8-nc-yOd">
-                                <rect key="frame" x="59.5" y="129" width="295.5" height="43"/>
-                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="37"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evS-9e-NNm">
-                                <rect key="frame" x="57" y="272" width="300" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dxW-WW-53V">
+                                <rect key="frame" x="57" y="638" width="300" height="150"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="JdJ-gv-UMY"/>
+                                    <constraint firstAttribute="height" constant="150" id="eXF-Pe-bIZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="View All Memories">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evS-9e-NNm">
+                                <rect key="frame" x="57" y="175" width="300" height="150"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="JdJ-gv-UMY" userLabel="150"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="24"/>
                                 <state key="normal" title="Memory Eye">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="pushedMemoryEyeButton:" destination="heY-YN-qDN" eventType="touchUpInside" id="nXh-eE-MXX"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ysb-B9-vUf">
-                                <rect key="frame" x="57" y="422" width="300" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ysb-B9-vUf">
+                                <rect key="frame" x="57" y="419" width="300" height="150"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="bgU-0A-yjj"/>
+                                    <constraint firstAttribute="height" constant="150" id="bgU-0A-yjj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Add Memory">
@@ -52,29 +62,16 @@
                                     <segue destination="bO0-Ue-z5E" kind="show" id="jRX-96-y3n"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dxW-WW-53V">
-                                <rect key="frame" x="57" y="572" width="300" height="50"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="eXF-Pe-bIZ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <state key="normal" title="View All Memories">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="dxW-WW-53V" firstAttribute="leading" secondItem="9OC-R8-RvX" secondAttribute="leading" constant="57" id="1rX-PU-WsH"/>
                             <constraint firstItem="9OC-R8-RvX" firstAttribute="trailing" secondItem="dxW-WW-53V" secondAttribute="trailing" constant="57" id="5Hg-g0-hZp"/>
-                            <constraint firstItem="qS8-nc-yOd" firstAttribute="top" secondItem="9OC-R8-RvX" secondAttribute="top" constant="41" id="5LV-fA-jB0"/>
-                            <constraint firstItem="evS-9e-NNm" firstAttribute="leading" secondItem="9OC-R8-RvX" secondAttribute="leading" constant="57" id="Fcm-hc-ZUe"/>
                             <constraint firstItem="dxW-WW-53V" firstAttribute="top" secondItem="Ysb-B9-vUf" secondAttribute="bottom" constant="100" id="K3u-Fw-i8q"/>
-                            <constraint firstItem="Ysb-B9-vUf" firstAttribute="top" secondItem="evS-9e-NNm" secondAttribute="bottom" constant="100" id="bJx-jf-ndH"/>
+                            <constraint firstItem="evS-9e-NNm" firstAttribute="top" secondItem="9OC-R8-RvX" secondAttribute="top" constant="100" id="PO3-iB-HcJ"/>
+                            <constraint firstItem="evS-9e-NNm" firstAttribute="leading" secondItem="9OC-R8-RvX" secondAttribute="leading" constant="57" id="Xk7-VC-C0B"/>
+                            <constraint firstItem="Ysb-B9-vUf" firstAttribute="top" secondItem="evS-9e-NNm" secondAttribute="bottom" constant="50" id="bJx-jf-ndH"/>
                             <constraint firstItem="Ysb-B9-vUf" firstAttribute="leading" secondItem="9OC-R8-RvX" secondAttribute="leading" constant="57" id="gHS-N2-4B8"/>
-                            <constraint firstItem="qS8-nc-yOd" firstAttribute="centerX" secondItem="9OC-R8-RvX" secondAttribute="centerX" id="nvH-PP-bwW"/>
-                            <constraint firstItem="evS-9e-NNm" firstAttribute="top" secondItem="qS8-nc-yOd" secondAttribute="bottom" constant="100" id="pMN-pr-xyO"/>
                             <constraint firstItem="9OC-R8-RvX" firstAttribute="trailing" secondItem="Ysb-B9-vUf" secondAttribute="trailing" constant="57" id="qeh-H4-zgw"/>
                             <constraint firstItem="9OC-R8-RvX" firstAttribute="trailing" secondItem="evS-9e-NNm" secondAttribute="trailing" constant="57" id="z6E-UC-Bfi"/>
                         </constraints>
